force-app/main/default/objects/ALM_Code_Map__mdt/ALM_Code_Map__mdt.object-meta.xml
<CustomObject>
    <description>REV-60 ALM Promo &amp; Dispatch code automation — per-determinant mapping. One record per determinant key: base promo code + standardised dispatch code, with per-row composition flags (year-suffix, +Z) and a per-row kill switch. Mapping values are seeded in Phase B once the base-promo determinant (spec §7.1) is confirmed. No product codes hardcoded in flow.</description>
    <label>ALM Code Map</label>
    <pluralLabel>ALM Code Maps</pluralLabel>
</CustomObject>