force-app/main/default/objects/ALM_Code_Map__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>REV-60: per-row kill switch. When false the engine ignores this mapping row.</description>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>