force-app/main/default/objects/ALM_Code_Map__mdt/fields/Apply_Year_Suffix__c.field-meta.xml
<CustomField>
    <fullName>Apply_Year_Suffix__c</fullName>
    <description>REV-60: when true, the contract-year suffix (Y2/Y3/Y4; year 1 unsuffixed) composes onto this base. Set false for fixed bases that never take a year suffix.</description>
    <defaultValue>true</defaultValue>
    <label>Apply Year Suffix</label>
    <type>Checkbox</type>
</CustomField>