force-app/main/default/objects/ALM_Code_Map__mdt/fields/Base_Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Base_Promo_Code__c</fullName>
    <description>REV-60: DBReg base promo for this determinant, e.g. !SJSI, MSHP, !AMLW. Composed at runtime as base + year suffix + Z. Empty in the Phase A scaffold.</description>
    <label>Base Promo Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>