force-app/main/default/objects/ALM_Code_Map__mdt/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <description>REV-60: optional currency qualifier for Product Base rows (ISO code, e.g. USD). When set, the row applies only to lines in that currency and beats the plain product row — used for the per-currency PCGE promo bases (PCE01=USD, PCE02=EUR, PCE03=GBP; Cindy 13 Jul 2026). Blank = any currency.</description>
    <label>Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>