force-app/main/default/objects/ALM_Code_Map__mdt/fields/Dispatch_Code__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Code__c</fullName>
    <description>REV-60: standardised target dispatch code for this determinant/product, e.g. OL, ME, ON. The engine never writes a P* (print) code to an ALM line. Empty in the Phase A scaffold.</description>
    <label>Dispatch Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>