force-app/main/default/objects/ALM_Code_Map__mdt/fields/Match_Key__c.field-meta.xml
<CustomField>
    <fullName>Match_Key__c</fullName>
    <description>REV-60 spec §7.1: the determinant value the engine matches a line's computed key against (e.g. ProductCode, or ProductCode + Region/Edition). Empty in the Phase A scaffold.</description>
    <label>Match Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>