force-app/main/default/objects/ALM_Code_Map__mdt/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>REV-60: config provenance — the source row in the Codes – Integra and DBReg sheet this mapping came from.</description>
    <label>Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>