force-app/main/default/objects/ALM_Code_Map__mdt/fields/Opp_Types__c.field-meta.xml
<CustomField>
    <fullName>Opp_Types__c</fullName>
    <description>REV-60: optional semicolon-separated Opportunity Types that gate a Team Override row (e.g. Renewal;Upsell). Blank = the override applies on any type. Used for the WNS team → !SREN rule (renewal/upsell only); Shawn's !SGRP row leaves it blank (any type).</description>
    <label>Opp Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>