force-app/main/default/objects/ALM_Code_Map__mdt/fields/Row_Type__c.field-meta.xml
<CustomField>
    <fullName>Row_Type__c</fullName>
    <description>REV-60: discriminator routing each row to the right lookup in the engine — Segment Base (firm segment → base promo), Team Override / Campaign Override (Non-AmLaw base overrides), Dispatch (product → dispatch code), Product Base (product → fixed base promo, e.g. GLBM → MSHP, ahead of the segment cascade). Mirrors REV-71's Setting_Type pattern.</description>
    <label>Row Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Segment Base</fullName>
            </value>
            <value>
                <fullName>Team Override</fullName>
            </value>
            <value>
                <fullName>Campaign Override</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Product Base</fullName>
            </value>
            <value>
                <fullName>Rep Override</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>