force-app/main/default/objects/ALM_Code_Map__mdt/fields/Z_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Z_Eligible__c</fullName>
    <description>REV-60 spec §7.4: when true, this base may take the +Z modifier — AND-ed with the global Z trigger (ALM_Code_Engine_Settings.Z_Trigger_Enabled + Z_Trigger_Product_Codes).</description>
    <defaultValue>false</defaultValue>
    <label>Z Eligible</label>
    <type>Checkbox</type>
</CustomField>